--- a/insights.html
+++ b/insights.html
@@ -114,37 +114,45 @@
             <div class="insights-content">
                   <ul class="item-wrapper">
                         <li class="item nopointer"> </li>
-                        <li class="item one ux-designer holder">
-                              <a class="tag" id="js-tag ux-designer"></a>
+
+                        <li class="item one ux-designer inhouse holder">
+                           <a class="tag" id="js-tag typographer"></a>
+                           <a class="subtag inhouse" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal"></img>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph"></img>
+
+                              </div>
+                        </li>
+
                         <li class="item two typographer inhouse holder">
+                           <a class="tag" id="js-tag typographer"></a>
+                           <a class="subtag inhouse" id="js-subtag inhouse"></a>
                               <div class=" journal-wrapper">
-                                    <img class="journal">
-                                    </img>
+                                    <img class="journal"></img>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag typographer"></a>
-                                    <a class="subtag" id="js-subtag inhouse"></a>
                               </div>
                         </li>
                         <li class="item three service-designer agency holder">
+                           <a class="tag " id="js-tag service-designer"></a>
+                           <a class="subtag agency" id="js-subtag agency"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
                               </div>
                               <div class="photograph-wrapper current">
                                     <img class="photograph"> </img>
-                                    <a class="tag " id="js-tag service-designer"></a>
-                                    <a class="subtag" id="js-subtag agency"></a>
+
                               </div>
                         </li>
                         <li class="item four ux-designer freelance holder">
+                           <a class="tag " id="js-tag ux-designer"></a>
+                           <a class="subtag" id="js-subtag freelance"></a>
                               <div class=" journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -152,12 +160,13 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag " id="js-tag ux-designer"></a>
-                                    <a class="subtag" id="js-subtag freelance"></a>
+
                               </div>
 
                         </li>
                         <li class="item five service-designer inhouse holder">
+                           <a class="tag " id="js-tag ux-designer"></a>
+                           <a class="subtag" id="js-subtag freelance"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -166,11 +175,12 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag " id="js-tag service-designer"></a>
-                                    <a class="subtag" id="js-subtag inhouse"></a>
+
                               </div>
                         </li>
                         <li class="item six ux-designer agency holder">
+                           <a class="tag" id="js-tag ux-designer"></a>
+                           <a class="subtag" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -178,11 +188,12 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag ux-designer"></a>
-                                    <a class="subtag" id="js-subtag agency"></a>
+
                               </div>
                         </li>
                         <li class="item seven service-designer freelance holder">
+                           <a class="tag" id="js-tag service-designer"></a>
+                           <a class="subtag" id="js-subtag freelance"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -190,11 +201,12 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag service-designer"></a>
-                                    <a class="subtag" id="js-subtag freelance"></a>
+
                               </div>
                         </li>
                         <li class="item eight typographer inhouse holder">
+                           <a class="tag" id="js-tag typographer"></a>
+                           <a class="subtag" id="js-subtag inhouse"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -202,11 +214,12 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag typographer"></a>
-                                    <a class="subtag" id="js-subtag inhouse"></a>
+
                               </div>
                         </li>
                         <li class="item nine creative agency holder">
+                           <a class="tag" id="js-tag creative"></a>
+                           <a class="subtag" id="js-subtag agency"></a>
                               <div class="journal-wrapper">
                                     <img class="journal">
                                     </img>
@@ -214,8 +227,7 @@
                               <div class="photograph-wrapper current">
                                     <img class="photograph">
                                     </img>
-                                    <a class="tag" id="js-tag creative"></a>
-                                    <a class="subtag" id="js-subtag agency"></a>
+
                               </div>
                         </li>
                   </ul>
